[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
description = "A crate for parsing and using JSON Schemas."
documentation = "https://docs.rs/json-schema"
homepage = "https://github.com/remexre/json-schema"
license = "MIT"
name = "json-schema"
readme = "README.md"
repository = "https://github.com/remexre/json-schema"
version = "0.1.0"

[badges]

[badges.travis-ci]
branch = "master"
repository = "remexre/json-schema"

[dependencies]
json-pointer = "^0.3.1"
lazy_static = { version = "^0.2.8", optional = true }
serde_json = "^1.0.2"

[dev-dependencies]
serde = "^1.0.8"
serde_derive = "^1.0.8"

[features]
default = ["metaschema"]

# Validate every parsed schema against the metaschema.
metaschema = ["lazy_static"]
