[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
description = "A crate for parsing and using JSON Schemas."
documentation = "https://docs.rs/json-schema"
homepage = "https://github.com/remexre/json-schema"
license = "MIT"
name = "json-schema"
readme = "README.md"
repository = "https://github.com/remexre/json-schema"
version = "0.1.0"

[badges]

[badges.travis-ci]
branch = "master"
repository = "remexre/json-schema"

[dependencies]
either = "^1.1.0"
json-pointer = "^0.3.2"
lazy_static = { version = "^0.2.8", optional = true }
# The changes we need will be published in 0.2.3.
regex = { version = "^0.2.2", git = "https://github.com/rust-lang/regex.git" }
# The changes we need are in PR #330.
serde_json = { version = "^1.0.2", git = "https://github.com/remexre/json.git", branch = "partialord" }
url = "^1.4.1"

[dev-dependencies]
serde = "^1.0.8"
serde_derive = "^1.0.8"

[features]
default = ["metaschema"]

# Validate every parsed schema against the metaschema.
metaschema = ["lazy_static"]
